# ragtester

./: .gitignore  INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  setup_dependencies.py
ragtester/: __init__.py  config.py  error_handling.py  install.py  logging_utils.py  tester.py  types.py  utils.py
ragtester/document_loader/: __init__.py  base.py  pdf_to_image.py  random_page_loader.py  simple_loaders.py
ragtester/evaluator/: metrics_judge.py
ragtester/llm/: api_utils.py  health_check.py  providers.py  providers_01ai.py  providers_anthropic.py  providers_baidu.py  providers_bedrock.py  providers_cohere.py  providers_deepseek.py  providers_fireworks.py  providers_gemini.py  providers_grok.py  providers_huggingface.py  providers_local.py  providers_mistral.py  providers_moonshot.py  providers_ollama.py  providers_openai.py  providers_perplexity.py  providers_qwen.py  providers_reka.py  providers_together.py  providers_zhipu.py
ragtester/question_generator/: generators.py
ragtester/rag_client/: clients.py
ragtester/reporter/: reporter.py
